--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "creative-coding-introduction",
   "private": true,
-  "version": "0.0.0",
+  "version": "1.0.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@vanilla-extract/css": "^1.11.0",
+    "antd": "^5.6.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "three": "^0.152.2"
@@ -18,10 +19,12 @@
   "devDependencies": {
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
+    "@types/three": "^0.152.1",
     "@typescript-eslint/eslint-plugin": "^5.57.1",
     "@typescript-eslint/parser": "^5.57.1",
     "@vanilla-extract/vite-plugin": "3.8.0",
     "@vitejs/plugin-react-swc": "^3.0.0",
+    "esbuild-vanilla-image-loader": "^0.1.3",
     "eslint": "^8.38.0",
     "eslint-import-resolver-typescript": "2.7.0",
     "eslint-plugin-html": "6.2.0",
